--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
                 <li><a href="#toTop">Haut de page</a></li>
                 <li><a href="#radio-button">Boutons radio</a></li>
                 <li><a href="#checkbox">Cases à cocher</a></li>
+                <li><a href="#selection-button">Boutons de sélection</a></li>
 
             </ul>
         </nav>
@@ -1413,6 +1414,7 @@
 
             <!-- Boutons radio -->
             <h2 id="radio-button">Boutons radio</h2>
+            <p>Ce composant est aussi disponible au format de <a href="#selection-button">boutons de sélection</a>.</p>
             <h3>Exemples</h3>
 
             <qc-doc-exemple caption="Exemple de boutons radio de taille moyenne avec différents états">
@@ -1535,7 +1537,7 @@
                 </script>
             </qc-doc-exemple>
 
-            <h4>Documentation technique</h4>
+            <h4 id="radio-button-attributes">Documentation technique</h4>
 
             <h5>Attributs de qc-radio-group</h5>
 
@@ -1606,7 +1608,7 @@
                         <td>tiled</td>
                         <td>NA</td>
                         <td>NA</td>
-                        <td>Affiche les boutons radio en boutons de sélection</td>
+                        <td>Affiche les boutons radio au format de <a href="#selection-button">boutons de sélection</a></td>
                     </tr>
                     <tr>
                         <td>inline</td>
@@ -1619,7 +1621,7 @@
                         <td>Nombre</td>
                         <td>1</td>
                         <td>
-                            Nombre de colonnes de chaque rangée de boutons de sélection dans la grille du groupe
+                            Nombre de colonnes de chaque rangée de <a href="#selection-button">boutons de sélection</a>n dans la grille du groupe
                         </td>
                     </tr>
                     </tbody>
@@ -1679,7 +1681,7 @@
                         <td></td>
                         <td>
                             Tout attribut commençant par <code class="qc-bg-color-grey-pale">radio-</code> sera ajouté
-                            comme attribut au bouton radio brut.
+                            comme attribut au bouton radio.
                         </td>
                     </tr>
                     <tr>
@@ -1707,7 +1709,11 @@
 
             <h2 id="checkbox">Cases à cocher</h2>
 
-            <p>Le composant de case à cocher permet de créer des éléments de formulaire pour la sélection multiple. Il peut être utilisé seul ou en groupe.</p>
+            <p>
+                Le composant de case à cocher permet de créer des éléments de formulaire pour la sélection multiple.
+                Il peut être utilisé seul ou en groupe.
+                Ce composant est aussi disponible au format de <a href="#selection-button">boutons de sélection</a>.
+            </p>
 
             <qc-doc-exemple caption="Exemple d’une case à cocher seule obligatoire">
                 <form id="exemple-tos-form">
@@ -1830,7 +1836,7 @@
             </qc-doc-exemple>
 
 
-            <h3>Documentation technique</h3>
+            <h3 id="checkbox-attributes">Documentation technique</h3>
 
             <h4>Attributs de qc-checkbox</h4>
             <div class="table-overflow">
@@ -2025,7 +2031,8 @@
 
             <!-- Boutons de sélection -->
 
-            <h2 id="selecion-button">Boutons de sélection</h2>
+            <h2 id="selection-button">Boutons de sélection</h2>
+            <h3>Exemples</h3>
 
             <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
                 <qc-radio-group legend="Choisissez une option :"
@@ -2101,6 +2108,9 @@
                     ></qc-radio-button>
                 </qc-radio-group>
             </qc-doc-exemple>
+
+            <h3>Documentation technique</h3>
+            <p>Voir les attributs des <a href="#radio-button-attributes">boutons radio</a> et des <a href="#checkbox-attributes">cases à cocher</a>.</p>
 
         </div>
     </main>
