--- a/public/index.html
+++ b/public/index.html
@@ -1798,7 +1798,7 @@
                             event.preventDefault();
                             let doSubmit = true;
                             event.target.querySelectorAll("[required]").forEach(group => {
-                                if (!(group.querySelectorAll("input").checked)) {
+                                if (group.value.length <= 0) {
                                     group.invalid = true;
                                     doSubmit = false;
                                 }
