Correction de regression JS des exemples de checkbox partie 2

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 <li><a href='#search-bar'>Barre de recherche</a></li>
                 <li><a href='#piv'>Composants du PIV</a>
                     <ul>
-                        <li><a href='#piv-header'>Bandeau d'en-tête du PIV</a>
+                        <li><a href='#piv-header'>Bandeau d’en-tête du PIV</a>
                         <li><a href='#piv-footer'>Pied de page du PIV</a>
                     </ul>
                 </li>
