Correction de regression de zone cliquable pour checkbox seule

--- a/public/index.html
+++ b/public/index.html
@@ -1606,14 +1606,14 @@
                     </tr>
                     <tr>
                         <td>tiled</td>
-                        <td>NA</td>
-                        <td>NA</td>
+                        <td>na</td>
+                        <td>na</td>
                         <td>Affiche les boutons radio au format de <a href="#selection-button">boutons de sélection</a></td>
                     </tr>
                     <tr>
                         <td>inline</td>
-                        <td>NA</td>
-                        <td>NA</td>
+                        <td>na</td>
+                        <td>na</td>
                         <td>Si les boutons radio sont `tiled`, affiche ceux-ci sur une rangée.</td>
                     </tr>
                     <tr>
@@ -1621,7 +1621,7 @@
                         <td>Nombre</td>
                         <td>1</td>
                         <td>
-                            Nombre de colonnes de chaque rangée de <a href="#selection-button">boutons de sélection</a>n dans la grille du groupe
+                            Nombre de colonnes de chaque rangée de <a href="#selection-button">boutons de sélection</a> dans la grille du groupe
                         </td>
                     </tr>
                     </tbody>
@@ -1863,8 +1863,8 @@
                         </tr>
                         <tr>
                             <td>tiled</td>
-                            <td>NA</td>
-                            <td>NA</td>
+                            <td>na</td>
+                            <td>na</td>
                             <td>
                                 Affiche les cases à cocher au format de bouton de sélection. Valeur héritée du
                                 <code class="qc-bg-color-grey-pale">qc-checkbox-group</code> parent si présent.
@@ -1969,14 +1969,14 @@
                         </tr>
                         <tr>
                             <td>tiled</td>
-                            <td>NA</td>
-                            <td>NA</td>
+                            <td>na</td>
+                            <td>na</td>
                             <td>Affiche les cases à cocher en boutons de sélection</td>
                         </tr>
                         <tr>
                             <td>inline</td>
-                            <td>NA</td>
-                            <td>NA</td>
+                            <td>na</td>
+                            <td>na</td>
                             <td>Si les cases à cocher sont `tiled`, affiche celles-ci sur une rangée.</td>
                         </tr>
                         <tr>
