Ajout de grille de boutons de selection sur une colonne au breakpoint mobile

--- a/public/index.html
+++ b/public/index.html
@@ -2036,7 +2036,10 @@
             <td>column-count</td>
             <td>Nombre</td>
             <td>1</td>
-            <td>Nombre de colonnes de la grille de boutons de sélection</td>
+            <td>
+                Nombre de colonnes de la grille de boutons de sélection.
+                <br/> Si la fenêtre est au format mobile (<code>--qc-breakpoint-sm</code>), la grille passe automatiquement à une colonne.
+            </td>
         </tr>
         <tr>
             <td>inline</td>
