--- a/public/index.html
+++ b/public/index.html
@@ -1925,7 +1925,12 @@
     </tbody>
   </table>
 </div>
-    <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
+    <h2 id="textfield">Champ texte</h2>
+
+<p>Le champ texte est un espace dans lequel est saisie une information qui tient sur une ou plusieurs lignes de texte.
+  Il peut s’agir d’une combinaison de lettres, de chiffres et de symboles.</p>
+
+<qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
   <form id="formulaire-champs-textes">
     <qc-textfield
             name="text-sm"
