Suppression de la propriété inutilisée `size` dans Button et ajout d'exemples d'utilisation dans la documentation

--- a/public/index.html
+++ b/public/index.html
@@ -979,6 +979,14 @@
 <h3>Précision concernant le DOM d’ombre (Shadow dom)</h3>
 <p>Ce composant ne contient pas de DOM d’ombre.</p>
 
+    <h1>Boutons</h1>
+
+<qc-button variant="primary" label="Principal"></qc-button>
+<qc-button variant="secondary" rounded label="Secondaire"></qc-button>
+<qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
+<qc-button variant="danger" inverted label="Supprimer"></qc-button>
+
+
     <!-- bandeau d’entête PIV -->
     <h2 id="piv-header">Bandeau d’en-tête du PIV (qc-piv-header)</h2>
 
