--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
     <li><a href='#alert'>Alerte générale</a></li>
     <li><a href='#notice'>Avis</a></li>
     <li><a href='#search-bar'>Barre de recherche</a></li>
+    <li><a href='#buttons'>Boutons</a></li>
     <li><a href='#piv'>Composants du PIV</a>
       <ul>
         <li><a href='#piv-header'>Bandeau d’en-tête du PIV</a>
@@ -979,12 +980,49 @@
 <h3>Précision concernant le DOM d’ombre (Shadow dom)</h3>
 <p>Ce composant ne contient pas de DOM d’ombre.</p>
 
-    <h1>Boutons</h1>
+    <h2 id="buttons">Boutons</h2>
+<h3>Exemples</h3>
 
-<qc-button variant="primary" label="Principal"></qc-button>
-<qc-button variant="secondary" rounded label="Secondaire"></qc-button>
-<qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
-<qc-button variant="danger" inverted label="Supprimer"></qc-button>
+<!-- Ligne 1 : Boutons principaux -->
+<div>
+    <qc-button variant="primary" label="Principal"></qc-button>
+    <qc-button variant="primary" rounded label="Principal arrondi"></qc-button>
+    <qc-button variant="primary" disabled label="Principal désactivé"></qc-button>
+    <qc-button variant="primary" compact label="Principal compact"></qc-button>
+    <qc-button variant="primary" compact rounded label="Principal compact arrondi"></qc-button>
+    <qc-button variant="primary" compact disabled label="Principal compact désactivé"></qc-button>
+</div>
+
+<!-- Ligne 2 : Boutons secondaires -->
+<div>
+    <qc-button variant="secondary" label="Secondaire"></qc-button>
+    <qc-button variant="secondary" rounded label="Secondaire arrondi"></qc-button>
+    <qc-button variant="secondary" disabled label="Secondaire désactivé"></qc-button>
+    <qc-button variant="secondary" compact label="Secondaire compact"></qc-button>
+    <qc-button variant="secondary" compact rounded label="Secondaire compact arrondi"></qc-button>
+    <qc-button variant="secondary" compact disabled label="Secondaire compact désactivé"></qc-button>
+</div>
+
+<!-- Ligne 3 : Boutons tertiaires -->
+<div>
+    <qc-button variant="tertiary" label="Tertiaire"></qc-button>
+    <qc-button variant="tertiary" rounded label="Tertiaire arrondi"></qc-button>
+    <qc-button variant="tertiary" disabled label="Tertiaire désactivé"></qc-button>
+    <qc-button variant="tertiary" compact label="Tertiaire compact"></qc-button>
+    <qc-button variant="tertiary" compact rounded label="Tertiaire compact arrondi"></qc-button>
+    <qc-button variant="tertiary" compact disabled label="Tertiaire compact désactivé"></qc-button>
+</div>
+
+<!-- Ligne 4 : Boutons d'avertissement -->
+<div>
+    <qc-button variant="danger" label="Avertissement"></qc-button>
+    <qc-button variant="danger" rounded label="Avertissement arrondi"></qc-button>
+    <qc-button variant="danger" disabled label="Avertissement désactivé"></qc-button>
+    <qc-button variant="danger" compact label="Avertissement compact"></qc-button>
+    <qc-button variant="danger" compact rounded label="Avertissement compact arrondi"></qc-button>
+    <qc-button variant="danger" compact disabled label="Avertissement compact désactivé"></qc-button>
+</div>
+
 
 
     <!-- bandeau d’entête PIV -->
